Enhance PayPerFax service description with link
Updated the description of the PayPerFax service to include a link.

--- a/index.mdx
+++ b/index.mdx
@@ -5,7 +5,7 @@ description: "Send faxes online to 130+ countries without registration or subscr
 
 ## Pay-per-use online fax service
 
-PayPerFax enables instant fax transmission to 130+ countries without registration or subscription. Simply upload your document, enter the destination, and pay only if your fax succeeds.
+The PayPerFax [pay-per-use fax service](https://payperfax.com/) enables instant fax transmission to 130+ countries without registration or subscription. Simply upload your document, enter the destination, and pay only if your fax succeeds.
 
 <CardGroup cols={3}>
   <Card title="No Registration" icon="user-slash" color="#2563EB">
